# edusuite_backend

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 05d9d977c558_add_formateur_formation.py  1b21c02f3eef_add_recurrence_rule_model.py  2e3fc24e73a8_add_session_models_related.py  2fdbb16e28e0_add_salle_model.py  3231c9e0ed7b_fix_model_session.py  32be2f6c8fe8_add_formateur_rate.py  4647936f8e55_add_modules_model.py  498b9255a6bb_add_objectifs_to_courses.py  4a60a056c0ec_added_session_plan.py  8c8c96d9b9f1_add_session_model.py  91de483b1ac2_add_opportunity_model.py  a3ffcae59fd7_add_user_model.py  c852c6d12d38_recreate_clean_enum.py  c88ae8d77128_add_objectifs_to_courses_v.py  d3e97250acbe_crm_company_model.py  f39de01c6ba2_update_session_seq_number.py
src/api/: router.py
src/api/dependencies/: context.py
src/core/: config.py  exception.py  filters.py  pagination.py  request_context.py
src/core/enums/: role.py
src/db/: base.py  models.py  session.py
src/db/repositories/: base_repository.py  interface.py
src/db/usecases/: base_usecase.py
src/features/auth/: exceptions.py  routes.py
src/features/auth/domain/: user.py
src/features/auth/models/: users.py
src/features/auth/repository/: auth_repository.py
src/features/auth/schemas/: jwt_payload.py  user.py
src/features/auth/security/: jwt.py  password.py
src/features/auth/usecases/: auth_service.py
src/features/crm/: router.py
tests/unit/sessions/: test_generate_occurrences.py  test_occurrences.py
(+79 files in other folders)
